components/plotting-service/envs/production/plotting-service.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plotting-service
  namespace: fia
spec:
  template:
    spec:
      containers:
        - name: plotting-service
          image: ghcr.io/fiaisis/plotting-service@sha256:1e3982a06390e38be4cad34948f90ba865dfce03eface0f97836ec0208a5cd38
