components/plotting-service/envs/production/httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: plotting-service
  namespace: fia
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: envoy-gateway
    namespace: envoy-gateway-system
    sectionName: https-main
  hostnames:
    - "reduce.isis.cclrc.ac.uk"
  rules:
  # Rewrites /plottingapi/meta/ to /meta
  - matches:
    - path:
        type: Exact
        value: /plottingapi/meta/
    filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplaceFullPath
            replaceFullPath: /meta
    backendRefs:
      - name: plotting-service-service
        port: 80

    # Rewrites /plottingapi/attr/ to /attr
  - matches:
      - path:
          type: Exact
          value: /plottingapi/attr/
    filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplaceFullPath
            replaceFullPath: /attr
    backendRefs:
      - name: plotting-service-service
        port: 80

  # Rewrites URL to remove plottingapi if no meta present
  - matches:
    - path:
        type: PathPrefix
        value: /plottingapi
    filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplacePrefixMatch
            replacePrefixMatch: /
    backendRefs:
    - group: ''
      kind: Service
      name: plotting-service-service
      port: 80
      weight: 1
